<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="300dip"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    
    android:padding="15dip" >

    <TextView
        android:id="@+id/date_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/select"
        android:clickable="true"
        android:gravity="center"
        android:hint="@string/start_time"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/time_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dip"
        android:background="@drawable/select"
        android:clickable="true"
        android:gravity="center"
        android:hint="@string/all_day"
        android:padding="10dip"
        android:textColor="#000000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center" >

        <Button
            android:id="@+id/sure"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/confir_btn"
            android:textColor="@color/white"
            android:text="@string/all_set" />

        <Button
            android:id="@+id/cancle"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/confir_btn"
            android:layout_marginLeft="20dip"
            android:textColor="@color/white"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>