<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
  
    android:padding="15dip" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time" />

        <TimePicker
            android:id="@+id/begin_time"
            android:layout_width="175dp"
            android:layout_height="90dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time" />

        <TimePicker
            android:id="@+id/end_time"
             android:layout_width="175dp"
            android:layout_height="90dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dip"
        android:gravity="center" >

        <Button
            android:id="@+id/sure"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/confir_btn"
            android:textColor="@color/white"
            android:text="@string/all_set" />

        <Button
            android:id="@+id/cancle"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dip"
            android:textColor="@color/white"
            android:background="@drawable/confir_btn"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>