<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title"
        android:gravity="left"
        android:orientation="vertical" >

        <Button
            android:id="@+id/location_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/select"
            android:gravity="left"
            android:onClick="things"
            android:paddingBottom="15dip"
            android:paddingLeft="20dip"
            android:paddingTop="15dip"
            android:text="@string/renew_position"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D1EEEE" />
        
        <Button
            android:id="@+id/lock_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/select"
            android:gravity="left"
            android:onClick="things"
            android:paddingBottom="15dip"
            android:paddingLeft="20dip"
            android:paddingTop="15dip"
            android:text="@string/remote_fortify"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D1EEEE" />

        <Button
            android:id="@+id/unlock_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/select"
            android:gravity="left"
            android:onClick="things"
            android:paddingBottom="15dip"
            android:paddingLeft="20dip"
            android:paddingTop="15dip"
            android:text="@string/remote_disarm"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D1EEEE" />

        <Button
            android:id="@+id/break_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/select"
            android:gravity="left"
            android:onClick="things"
            android:paddingBottom="15dip"
            android:paddingLeft="20dip"
            android:paddingTop="15dip"
            android:text="@string/remote_cutoff"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D1EEEE" />

        <Button
            android:id="@+id/unbreak_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/select"
            android:gravity="left"
            android:onClick="things"
            android:paddingBottom="15dip"
            android:paddingLeft="20dip"
            android:paddingTop="15dip"
            android:text="@string/remote_recover"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D1EEEE" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/select"
            android:gravity="left"
            android:onClick="things"
            android:paddingBottom="15dip"
            android:paddingLeft="20dip"
            android:paddingTop="15dip"
            android:text="@string/reset_device"
            android:textSize="18sp" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D1EEEE" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/back"
            style="@style/button_style"
            android:layout_marginLeft="5dip"
            android:background="@drawable/return_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/remote_control_menu"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </RelativeLayout>

</RelativeLayout>